1) rename Table to TablesLayout to avoid name conflict with Table class 2) add Center property to Cicle User Control

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -13,7 +13,7 @@
             </TabItem>
             <TabItem 
                 Header="Table">
-                <local:Table/>
+                <local:TablesLayout/>
 
             </TabItem>
             <TabItem Header="Edit">
