Once Circle is added it become yellow

--- a/WpfApp1/TablesLayout.xaml
+++ b/WpfApp1/TablesLayout.xaml
@@ -17,7 +17,12 @@
             Canvas.Right="0" 
             Canvas.Bottom="0"
             MouseDown="AddButton_MouseDown"
-            AllowDrop="True"/>
+            AllowDrop="True">
+
+           
+
+
+        </local:Circle>
 
 
 
