change the zindex of selected circle so that selected circle is alwasy above other graphical component

--- a/WpfApp1/TablesLayout.xaml
+++ b/WpfApp1/TablesLayout.xaml
@@ -18,13 +18,14 @@
             Canvas.Right="0" 
             Canvas.Bottom="0"
             MouseDown="AddButton_MouseDown"
-            AllowDrop="True">
-        </local:Circle>
+            Panel.ZIndex="2"/>
+
 
         <local:Circle 
             x:Name="deleteButton" 
             Canvas.Left="0" 
-            Canvas.Bottom="0"/>
+            Canvas.Bottom="0"
+            Panel.ZIndex="2"/>
 
 
 
