add the boudry condition so that circle cannot be moved out of canvas

--- a/WpfApp1/TablesLayout.xaml
+++ b/WpfApp1/TablesLayout.xaml
@@ -25,6 +25,8 @@
             x:Name="deleteButton" 
             Canvas.Left="0" 
             Canvas.Bottom="0"
+            MouseUp="DeleteButton_MouseUp"
+            
             Panel.ZIndex="2"/>
 
 
