--- a/WpfApp1/Pages/TablesPage.xaml
+++ b/WpfApp1/Pages/TablesPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WpfApp1.TablesLayout"
+﻿<UserControl x:Class="WpfApp1.Pages.TablesPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -28,12 +28,6 @@
             MouseUp="DeleteButton_MouseUp"
             
             Panel.ZIndex="2"/>
-
-        <TextBlock x:Name="tb" Text="abc">
-            
-        </TextBlock>
-
-
 
 
     </Canvas>
