--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -18,7 +18,7 @@
 
             </TabItem>
             <TabItem Header="Edit">
-
+                <page:EditPage x:Name="editPage" />
             </TabItem>
             <TabItem Header="Sales">
 
