--- a/WpfApp1/Pages/EditPage.xaml
+++ b/WpfApp1/Pages/EditPage.xaml
@@ -1,19 +1,26 @@
-﻿<UserControl x:Class="WpfApp1.Pages.EditPage"
+﻿<UserControl x:Name="editPage" 
+             x:Class="WpfApp1.Pages.EditPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp1.Pages"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+             d:DesignHeight="300" 
+             d:DesignWidth="300">
+    <Grid >
         <ListView>
             <ListView.View>
                 <GridView>
                 </GridView>
             </ListView.View>
         </ListView>
-        
-            
+        <Button 
+            x:Name="btn" 
+            Click="Button_Click">
+            Button
+        </Button>
+
+
     </Grid>
 </UserControl>
