--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Name="mainWindow" x:Class="WpfApp1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,8 +7,7 @@
         xmlns:page="clr-namespace:WpfApp1.Pages"
         mc:Ignorable="d"
         Title="MainWindow" 
-        Height="600" 
-        Width="600"
+        WindowState="Maximized"
         Closing="Window_Closing">
     <Grid AllowDrop="True">
         <TabControl>
