--- a/WpfApp1/Pages/EditPage.xaml
+++ b/WpfApp1/Pages/EditPage.xaml
@@ -1,56 +1,55 @@
-﻿<UserControl x:Name="editPage" 
+﻿<UserControl x:Name="editPage"
              x:Class="WpfApp1.Pages.EditPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:WpfApp1.Pages"
              xmlns:converter="clr-namespace:WpfApp1.Converters"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" 
+             mc:Ignorable="d"
+             d:DesignHeight="300"
              d:DesignWidth="300"
              MinWidth="600">
-    <UserControl.Resources>
-        <converter:OneFourth x:Key="OneFourth"/>
-    </UserControl.Resources>
-    <Grid x:Name="grid" >
-        <Grid.RowDefinitions>
-            <RowDefinition Height="4*" />
-            <RowDefinition Height="1*" />
-        </Grid.RowDefinitions>
-        <ListView x:Name="itemListView"  Grid.Row="0">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn 
-                        Width="{Binding ElementName=itemListView, Path=ActualWidth, Converter={StaticResource OneFourth}}"
-                        
-                        Header="Name"  
-                        DisplayMemberBinding="{Binding Name}" />
-                    <GridViewColumn 
-                        Width="{Binding ElementName=itemListView, Path=ActualWidth, Converter={StaticResource OneFourth}}" 
-                        Header="Cetegory"  
-                        DisplayMemberBinding="{Binding Category}" />
-                    <GridViewColumn 
-                        Width="{Binding ElementName=itemListView, Path=ActualWidth, Converter={StaticResource OneFourth}}" 
-                        Header="Price"  
-                        DisplayMemberBinding="{Binding Price}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
-        <WrapPanel VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="1">
-            <Button x:Name="AddButton" Margin="10">
-                Add
-            </Button>
-            <Button 
-                x:Name="deleteButton"
-                Margin="10"
-                Click="deleteButton_Click">
-                Remove
-            </Button>
-            
-            
-        </WrapPanel>
+  <UserControl.Resources>
+    <converter:OneFourth x:Key="OneFourth" />
+  </UserControl.Resources>
+  <Grid x:Name="grid">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="4*" />
+      <RowDefinition Height="1*" />
+    </Grid.RowDefinitions>
+    <ListView x:Name="itemListView"
+              Grid.Row="0">
+      <ListView.View>
+        <GridView>
+          <GridViewColumn Width="{Binding ElementName=itemListView, Path=ActualWidth, Converter={StaticResource OneFourth}}"
+                          Header="Name"
+                          DisplayMemberBinding="{Binding Name}" />
+          <GridViewColumn Width="{Binding ElementName=itemListView, Path=ActualWidth, Converter={StaticResource OneFourth}}"
+                          Header="Cetegory"
+                          DisplayMemberBinding="{Binding Category}" />
+          <GridViewColumn Width="{Binding ElementName=itemListView, Path=ActualWidth, Converter={StaticResource OneFourth}}"
+                          Header="Price"
+                          DisplayMemberBinding="{Binding Price}" />
+        </GridView>
+      </ListView.View>
+    </ListView>
+    <WrapPanel VerticalAlignment="Center"
+               HorizontalAlignment="Center"
+               Grid.Row="1">
+      <Button x:Name="AddButton"
+              Margin="10">
+        Add
+      </Button>
+      <Button x:Name="deleteButton"
+              Margin="10"
+              Click="deleteButton_Click">
+        Remove
+      </Button>
 
 
-    </Grid>
+    </WrapPanel>
+
+
+  </Grid>
 </UserControl>
