--- a/WpfApp1/Pages/TablesPage.xaml
+++ b/WpfApp1/Pages/TablesPage.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp1"
+             xmlns:model="clr-namespace:WpfApp1.Models"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="500"
              AllowDrop="True">
@@ -12,8 +13,8 @@
         Height="500"
         Width="500"
         x:Name="canvas">
-
-        <local:Circle 
+        
+        <model:Circle 
             x:Name="addButton" 
             Canvas.Right="0" 
             Canvas.Bottom="0"
@@ -21,7 +22,7 @@
             Panel.ZIndex="2"/>
 
 
-        <local:Circle 
+        <model:Circle 
             x:Name="deleteButton" 
             Canvas.Left="0" 
             Canvas.Bottom="0"
