--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,50 +1,45 @@
-﻿ <Window x:Name="mainWindow" x:Class="WpfApp1.MainWindow"
+﻿<Window x:Name="mainWindow"
+        x:Class="WpfApp1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         xmlns:page="clr-namespace:WpfApp1.Pages"
-      
         mc:Ignorable="d"
-        Title="MainWindow" 
+        Title="MainWindow"
         WindowState="Maximized"
         Closing="Window_Closing"
-         MinHeight="600"
-         MinWidth="800">
-    <Grid AllowDrop="True">
-        <TabControl>
-            <TabItem 
-                FontSize="20" 
-                Header="Main">
-                <ScrollViewer 
-                    HorizontalScrollBarVisibility="Auto">
-                    <page:TablesPage/>
-                </ScrollViewer>
-            </TabItem>
+        MinHeight="600"
+        MinWidth="800">
+  <Grid AllowDrop="True">
+    <TabControl>
+      <TabItem FontSize="20"
+               Header="Main">
+        <ScrollViewer HorizontalScrollBarVisibility="Auto">
+          <page:TablesPage />
+        </ScrollViewer>
+      </TabItem>
 
-            <TabItem 
-                FontSize="20"
-                Header="Table">
-                
+      <TabItem FontSize="20"
+               Header="Table">
+        <page:TestPage />
 
-            </TabItem>
-                   
-            <TabItem 
-                FontSize="20"
-                Header="Edit">
-                
-                   <page:EditPage x:Name="editPage" />
-               
-            </TabItem>
-            
-            <TabItem 
-                FontSize="20"
-                Header="Sales">
+      </TabItem>
 
-            </TabItem>
-        </TabControl>
-       
+      <TabItem FontSize="20"
+               Header="Edit">
 
-    </Grid>
+        <page:EditPage x:Name="editPage" />
+
+      </TabItem>
+
+      <TabItem FontSize="20"
+               Header="Sales">
+
+      </TabItem>
+    </TabControl>
+
+
+  </Grid>
 </Window>
