--- a/WpfApp1/Pages/EditPage.xaml
+++ b/WpfApp1/Pages/EditPage.xaml
@@ -16,7 +16,7 @@
     <Style TargetType="Button"
            x:Key="buttonStyle">
       <Setter Property="Margin"
-              Value="10,10,10,0" />
+              Value="10,10,10,10" />
       <Setter Property="Padding"
               Value="5" />
     </Style>
@@ -80,10 +80,9 @@
           </GridView>
         </ListView.View>
       </ListView>
+      
       <StackPanel Grid.Column="1"
                   Margin="5,0,5,0">
-        
-
         <GridViewColumnHeader Content="Category"/>
         <ListBox x:Name="categoriesListBox"
                  SelectionMode="Extended"
@@ -91,35 +90,40 @@
       </StackPanel>
       
     </Grid>
-    <WrapPanel VerticalAlignment="Center"
-               HorizontalAlignment="Center"
-               Grid.Row="1">
-      <!--Height="{Binding ElementName=stackpanel, Path=ActualHeight, Converter={StaticResource Multiplier}, ConverterParameter=0.1}"-->
+    
+    <Grid Grid.Row="1">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="1*"/>
+        <ColumnDefinition Width="1*"/>
+        <ColumnDefinition Width="1*" />
+        <ColumnDefinition Width="1*" />
+      </Grid.ColumnDefinitions>
+
       <Button x:Name="addItemButton"
-              Style="{StaticResource buttonStyle}">
-        Add Item
-      </Button>
-      
-      <Button x:Name="deleteItemButton"
+              Grid.Column="0"
               Style="{StaticResource buttonStyle}"
-              Click="DeleteItemButton_Click">
-        Remove Item
-      </Button>
+              Click="AddItemButton_Click"
+              Content="Add Item"/>
+
+      <Button x:Name="deleteItemButton"
+              Grid.Column="1"
+              Style="{StaticResource buttonStyle}"
+              Click="DeleteItemButton_Click"
+              Content="Remove Item" />
 
       <Button x:Name="addCategoryButton"
               Style="{StaticResource buttonStyle}"
+              Grid.Column="2"
               Click="AddCategoryButton_Click"
-              Content="Add Category">
-      </Button>
+              Content="Add Category" />
 
       <Button x:Name="deleteCategoryButton"
               Style="{StaticResource buttonStyle}"
-              Click="DeleteCategoryButton_Click">
-         Remove Category
-      </Button>
+              Grid.Column="3"
+              Click="DeleteCategoryButton_Click"
+              Content="Remove Category" />
 
-
-    </WrapPanel>
+    </Grid>
 
   </Grid>
 
