--- a/WpfApp1/Windows/AddItemWindow.xaml
+++ b/WpfApp1/Windows/AddItemWindow.xaml
@@ -6,30 +6,86 @@
         xmlns:local="clr-namespace:WpfApp1.Windows"
         mc:Ignorable="d"
         Title="AddItemWindow"
-        Height="300"
-        Width="300">
+        Height="400"
+        Width="800"
+        MinHeight="400"
+        MinWidth="800">
   <Window.Resources>
-    <Style TargetType="Label">
-      <Setter Property="Margin"
-              Value="5" />
-
+    <Style TargetType="TextBlock">
+      <Setter Property="FontSize"
+              Value="20" />
     </Style>
-    
+    <Style TargetType="Button">
+      <Setter Property="Margin"
+              Value="20,20,20,20" />
+      <Setter Property="Padding"
+              Value="10" />
+      <Setter Property="FontSize"
+              Value="20" />
+    </Style>
   </Window.Resources>
-  <StackPanel>
-    <Label />
-    <TextBox />
-    <Label />
-    <TextBox />
-    <Label />
-    <TextBox />
-    <WrapPanel>
-      <Button />
-      <Button />
 
-    </WrapPanel>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="3*" />
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+    <StackPanel>
 
+      <Grid Margin="5,20,5,10">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="2*" />
+          <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="Name" />
+        <TextBox x:Name="nameTextBox"
+                 Grid.Column="1" />
+        <TextBlock Grid.Column="2"
+                   Margin="5,0,0,0"
+                   Text="Name cannot be Blank" />
+      </Grid>
 
+      <Grid Margin="5,10,5,10">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="2*" />
+          <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="Price" />
+        <TextBox Grid.Column="1" />
+        <TextBlock Grid.Column="2"
+                   Margin="5,0,0,0"
+                   Text="Price need be Numeric" />
+      </Grid>
 
-  </StackPanel>
+      <Grid Margin="5,10,5,10">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="2*" />
+          <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="Category" />
+        <ComboBox x:Name="categoriesComboBox"
+                  Grid.Column="1" />
+        <TextBlock Grid.Column="2"
+                   Margin="5,0,0,0"
+                   Text="Category Cannot be blank" />
+      </Grid>
+
+    </StackPanel>
+
+    <Grid Grid.Row="1">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+      <Button x:Name="addButton"
+              Content="Add"/>
+      <Button Content="Cancel"
+              IsCancel="True"
+              Grid.Column="1" />
+    </Grid>
+
+  </Grid>
 </Window>
